Added Gravity app card

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -35,6 +35,12 @@ h1 {
   font-size: 100px;
 }
 
+.fa-slack {
+  color: #1b1919;
+  margin-bottom: 20px;
+  font-size: 100px;
+}
+
 .fa-react {
   color: #1b1919;
   margin-bottom: 20px;
