--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,12 +7,23 @@
   align-items: center;
 }
 
+.fa-compass {
+  color: #242424;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  font-size: 55px;
+} 
+
+.fa-compass:hover{
+  transform: scale(1.1);
+}
+
 .fa-github-square {
   color: #242424;
   margin-right: 15px;
   margin-bottom: 20px;
   font-size: 55px;
-}
+} 
 
 .fa-github-square:hover{
   transform: scale(1.1);
