--- a/src/components/MainSection.css
+++ b/src/components/MainSection.css
@@ -65,3 +65,31 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width:400px) {
+  .main-container  {
+    margin-top: -50px;
+    background: url('../images/phone-main-home.jpg') center center/fill no-repeat;
+    background-position-x: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+    object-fit: contain;
+  }
+
+  .main-container > h2 {
+    font-size: 25px;
+    margin-top: 110%;
+  }
+
+  .btn-mobile {
+    display: block;
+    text-decoration: none;
+  }
+
+  .btn {
+    width: 100%;
+  }
+}
